Fixed alignment and menu item on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -484,7 +484,7 @@ header a.button:hover span.button-text {
 .options-wrapper.show .sub-menu-title {
   font-size: var(--body-font-size-xs);
   font-weight: var(--font-weight-bold);
-  margin-left: 30px;
+  margin-left: 20px;
   padding-left: 20px; 
   position: relative;
 }
@@ -753,7 +753,7 @@ header a.button:hover span.button-text {
     font-weight: var(--font-weight-boldest);
     line-height: 18px;
     padding: 7px 10px;
-    margin: 10px 25px 0 19px;
+    margin: 10px 25px 0 15px;
   }
 
   .other-options > div:nth-child(5) {
